--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="code/Histogram.js"></script>
     <title>MPG Data</title>
-    
+
     <script type="text/javascript">
-        d3.csv("https://vickyliuwenwei.github.io/VA_Gerrymandering/data/17_mms.csv", parser, 
+        d3.csv("data/prius_gas.csv", parser, 
             function(error, csvdata) {
         mpghist(csvdata);
         });
