--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
   <body>
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="code/Histogram.js"></script>
+    <!-- <script src="code/Histogram.js"></script> -->
+    <script src="code/Test_Hist.js"></script>
     <title>MPG Data</title>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         d3.csv("data/prius_gas.csv", parser, 
             function(error, csvdata) {
         mpghist(csvdata);
         });
-    </script>
+    </script> -->
   </body>
 </html>
