--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         mpghist(csvdata);
         });
     </script> -->
+    <script src="code/Test_Hist.js" type="text/javascript"></script>  
   </body>
 </html>
