--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
-<html>
-  <body>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!-- Other CSS -->
+        <script src="http://d3js.org/d3.v3.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="https://d3js.org/d3-queue.v3.min.js"></script>
+        <script src="code/Test_Hist.js"></script>
+
+        <title>VA Gerrymandering</title>
+    </head>
+
+    <body>
+        <header>Visualization of Virginia Gerrymandering Histograms</header>
+        <div class="title">
+            <h3>Airbnbs Within Walking Distance of an MBTA Stop</h3>
+        </div>
+
+        <p id = "explain">This visualization offers a comparison by location of Airbnb listings based on data centered around each MBTA stop. The data can be filtered based on Airbnb room types and price range to provide an understanding of disparities or similarities of location within each type of listing. Using Airbnb data of 6247 Airbnbs, we are able to depict an aggregate overview of Boston neighborhoods based on a walkable distance (1 kilometer) from each MBTA stop.</p>
     <!-- <script src="code/Histogram.js"></script> -->
-    <script src="code/Test_Hist.js"></script>
-    <title>MPG Data</title>
+    
 
     <!-- <script type="text/javascript">
         d3.csv("data/prius_gas.csv", parser, 
@@ -11,6 +33,5 @@
         mpghist(csvdata);
         });
     </script> -->
-    <script src="code/Test_Hist.js" type="text/javascript"></script>  
-  </body>
+    </body>
 </html>
