--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         </div>
         <script type="text/javascript">
             d3.csv("data/prius_gas.csv", parser, function(error, csvdata) {
+                console.log("print_data")
                 mpghist(csvdata);
             });
         </script>
+        <script src="code/Histogram.js"></script>
+        <div id="mpg" class="graph"></div>
     </body>
 </html>
