--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>MPG Data</title>
 		<!-- <link rel="stylesheet" type="text/css" href="mpg.css" /> -->
-		<script src="lib/d3.v3.min.js"  charset="utf-8"></script>
-		<script src="lib/d3.tip.v0.6.3.js"></script>
+		<script src="code/lib/d3.v3.min.js"  charset="utf-8"></script>
+		<script src="code/lib/d3.tip.v0.6.3.js"></script>
 		<script src="code/Histogram.js" charset="utf-8"></script>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
