--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</table>
 
 		<script type="text/javascript">
-			d3.csv("data/prius_gas.csv", parser,
+			d3.csv("data/17_mms.csv", parser,
 				function(error, csvdata) {
 					mpghist(csvdata);
 				}); // end of d3.csv
