--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		<script type="text/javascript">
 			d3.csv("data/VA_data/plan_metrics_ATG17.csv", parser1,
 				function(error, csvdata) {
-					hist(csvdata);
+					var varname = "nb_splits"
+					hist(csvdata, varname);
 				}); // end of d3.csv
 		</script>
 
