--- a/index.html
+++ b/index.html
@@ -6,29 +6,18 @@
 		<script src="code/lib/d3.v3.min.js"  charset="utf-8"></script>
 		<script src="code/lib/d3.tip.v0.6.3.js"></script>
 		<script src="code/Histogram.js" charset="utf-8"></script>
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		  ga('create', 'UA-47982219-1', 'auto');
-		  ga('send', 'pageview');
-		</script>
 	</head>
 
 	<body>
 		<script type="text/javascript">
 			d3.csv("data/VA_data/plan_metrics_ATG17.csv", parser1,
-				function(error, csvdata) {
-					var varname = "nb_splits"
-					hist(csvdata, varname);
+				function(error, pardata) {
+					var varname = nb_splits
+					hist(pardata, varname);
 				}); // end of d3.csv
 		</script>
 
-<!-- 		<p> Test Run Done </p> -->
-		<!-- <div id="slideshow">
-			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="600" height="400" id="ssidx"><param name="movie" value="http://cdn.smugmug.com/ria/ShizamSlides-2013072402.swf" /><param name="flashVars" value="AlbumID=43680455&AlbumKey=6L4DcJ&transparent=true&bgColor=&borderThickness=&borderColor=&useInside=&endPoint=&mainHost=cdn.smugmug.com&VersionNos=2013072402&width=600&height=400&clickToImage=true&captions=false&showThumbs=false&autoStart=true&showSpeed=true&pageStyle=black&showButtons=true&randomStart=true&randomize=true&splash=http%3A%2F%2Fwww.smugmug.com%2Fimg%2Fria%2FShizamSlides%2Fsmugmug_black.png&splashDelay=0&crossFadeSpeed=350" /><param name="wmode" value="transparent" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><embed src="http://cdn.smugmug.com/ria/ShizamSlides-2013072402.swf" flashVars="AlbumID=43680455&AlbumKey=6L4DcJ&transparent=true&bgColor=&borderThickness=&borderColor=&useInside=&endPoint=&mainHost=cdn.smugmug.com&VersionNos=2013072402&width=600&height=400&clickToImage=true&captions=false&showThumbs=false&autoStart=true&showSpeed=true&pageStyle=black&showButtons=true&randomStart=true&randomize=true&splash=http%3A%2F%2Fwww.smugmug.com%2Fimg%2Fria%2FShizamSlides%2Fsmugmug_black.png&splashDelay=0&crossFadeSpeed=350" width="600" height="400" wmode="transparent" type="application/x-shockwave-flash" allowScriptAccess="always" allowNetworking="all" ></embed></object>
-		</div> -->
+		<!-- <p> Test Run Done </p> -->
 		<div id="mpg" class="graph"></div>
 
 		<footer>
