--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<script type="text/javascript">
 			d3.csv("data/VA_data/plan_metrics_ATG17.csv", parser1,
 				function(error, pardata) {
-					var varname = "nb_splits"
-					hist(pardata, varname);
+					hist1(csvdata);
 				}); // end of d3.csv
 		</script>
 
