--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<script type="text/javascript">
 			d3.csv("data/VA_data/plan_metrics_ATG17.csv", parser1,
-				function(error, pardata) {
+				function(error, csvdata) {
 					hist1(csvdata);
 				}); // end of d3.csv
 		</script>
