--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 	<body>
 		<script type="text/javascript">
-			d3.csv("data/VA_data/plan_metrics_ATG17.csv", parser1,
+			d3.csv("data/plan_metrics_ATG17.csv", parser1,
 				function(error, csvdata) {
 					hist1(csvdata);
-				}); // end of d3.csv
+				});
 		</script>
 
 		<!-- <p> Test Run Done </p> -->
