--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</script>
 
 		<!-- <p> Test Run Done </p> -->
-		<div id="mpg" class="graph"></div>
+		<div id="varg" class="graph"></div>
 
 		<footer>
             <p>&copy; Copyright 2019 &bull; Millie, Nhi, Vicky </p>
