--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 
 	<body>
 		<script type="text/javascript">
-			d3.csv("data/plan_metrics_ATG17.csv", parser1,
+			d3.csv("data/plan_metrics_ATG17.csv", parser,
 				function(error, csvdata) {
 					hist1(csvdata);
+				});
+			d3.csv("data/plan_metrics_ATG17.csv", parser,
+				function(error, csvdata) {
+					hist2(csvdata);
 				});
 		</script>
 
 		<!-- <p> Test Run Done </p> -->
-		<div id="varg" class="graph"></div>
+		<div id="nb_sp" class="graph"></div>
+		<br>
+		<div id="dtp" class="graph"></div>
 
 		<footer>
             <p>&copy; Copyright 2019 &bull; Millie, Nhi, Vicky </p>
