--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		<div id="nb_sp" class="graph"></div>
 		<br>
 		<div id="dtp" class="graph"></div>
-
+		<br>
+		<div id="nb_ct" class="graph"></div>
 		<footer>
             <p>&copy; Copyright 2019 &bull; Millie, Nhi, Vicky </p>
         </footer>
