--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>MPG Data</title>
 		<!-- <link rel="stylesheet" type="text/css" href="mpg.css" /> -->
-		<script src="code/lib/d3.v3.min.js"  charset="utf-8"></script>
+		<script src="//d3js.org/d3.v4.min.js"></script>
 		<script src="code/lib/d3.tip.v0.6.3.js"></script>
 		<!-- <script src="code/Histogram.js" charset="utf-8"></script> -->
 		<script src="code/Test_Hist.js" charset="utf-8"></script>
