--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
 
 	<body>
 		<script type="text/javascript">
-			d3.csv("data/plan_metrics_ATG17.csv", parser,
-				function(error, csvdata) {
-					hist(csvdata);
+			d3.csv("data/plan_metrics_ATG17.csv", function(error, csvdata) {
+					hist1(csvdata);
+				});
+			d3.csv("data/plan_metrics_ATG17.csv", function(error, csvdata) {
+					hist2(csvdata);
+				});
+			d3.csv("data/plan_metrics_ATG17.csv", function(error, csvdata) {
+					hist3(csvdata);
 				});
 		</script>
 
 		<!-- <p> Test Run Done </p> -->
 		<div id="nb_sp" class="graph"></div>
-		<!-- <br>
+		<br>
 		<div id="dtp" class="graph"></div>
 		<br>
-		<div id="nb_ct" class="graph"></div> -->
+		<div id="nb_ct" class="graph"></div>
 		<footer>
             <p>&copy; Copyright 2019 &bull; Millie, Nhi, Vicky </p>
         </footer>
