--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 			d3.csv("data/plan_metrics_ATG17.csv", function(error, csvdata) {
 					hist3(csvdata);
 				});
+			d3.csv("data/plan_metrics_ATG17.csv", function(error, csvdata) {
+					hist4(csvdata);
+				});
+			d3.csv("data/plan_metrics_ATG17.csv", function(error, csvdata) {
+					hist5(csvdata);
+				});
+			d3.csv("data/plan_metrics_ATG17.csv", function(error, csvdata) {
+					hist6(csvdata);
+				});
 		</script>
 
 		<!-- <p> Test Run Done </p> -->
@@ -28,6 +37,12 @@
 		<div id="dtp" class="graph"></div>
 		<br>
 		<div id="nb_ct" class="graph"></div>
+		<br>
+		<div id="egs" class="graph"></div>
+		<br>
+		<div id="hmss" class="graph"></div>
+		<br>
+		<div id="mms" class="graph"></div>
 		<footer>
             <p>&copy; Copyright 2019 &bull; Millie, Nhi, Vicky </p>
         </footer>
