--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<br>
 		<div id="mms" class="graph"></div>
 		<footer>
-            <p>&copy; Copyright 2019 &bull; Millie, Nhi, Vicky </p>
+            <p>&copy; Copyright 2019 &bull; Vicky </p>
         </footer>
 	</body>
 </html>
