--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</script>
 
 		<!-- <p> Test Run Done </p> -->
-		<div id="nb_sp" class="graph"></div>
+		<div id="nb_ct" class="graph"></div>
 		<br>
 		<div id="dtp" class="graph"></div>
 		<br>
