--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 	<body>
 		<script type="text/javascript">
-			d3.csv("data/plan_metrics_ATG17.csv", function(error, csvdata) {
-					hist(csvdata, "nb_cuts", "#nb_ct", "Number of Cuts");
-					hist(csvdata, "nb_splits", "#nb_sp", "Number of Cuts");
+			d3.csv("data/plan_metrics_ATG17.csv", "data/plan_metrics_ATG17_2.csv", 
+				function(error, csvdata, csvdat2) {
+					hist(csvdata, csvdata2, "nb_cuts", "#nb_ct", "Number of Cuts");
 				});
 			// d3.csv("data/plan_metrics_ATG17.csv", function(error, csvdata) {
 			// 		hist2(csvdata);
@@ -34,7 +34,7 @@
 
 		<!-- <p> Test Run Done </p> -->
 		<div id="nb_ct" class="graph"></div>
-		<div id="nb_sp" class="graph"></div>
+		<!-- <div id="nb_sp" class="graph"></div> -->
 
 		<br>
 		<footer>
