--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 		    "img/compare/hmss.png",
 		    "img/compare/nb_cuts.png"];
 
-			function switchImage() {
-			    var selectedImage = document.myForm.switch.options[document.myForm.switch.selectedIndex].value;
-			    document.myImage.src = imageList[selectedImage].src;
-			}
+			$('#picDD').change(function () {
+			    var val = parseInt($('#picDD').val());
+			    $('img').attr("src",imageList[val]);
+			});
 		</script>
 
 		
@@ -55,15 +55,13 @@
 		    <option value="4">Number of Cuts</option>
 		</select> -->
 
-		<img src="img/compare/mms.png" width="70" height="70" name="myImage" />
-		<form method="" action="" name="myForm">
-		    <select size="8" name="switch" onchange="switchImage();">
-		        <option value="1" selected>Mean-Median</option>
-		        <option value="2">Efficiency Gap</option>
-		        <option value="3">Number of Seats won by Democratic</option>
-		        <option value="4">Number of Cuts</option>
-		    </select>
-		</form>
+		<img src="img/compare/mms.png"/>
+	    <select id="picDD">
+	        <option value="1" selected>Mean-Median</option>
+	        <option value="2">Efficiency Gap</option>
+	        <option value="3">Number of Seats won by Democratic</option>
+	        <option value="4">Number of Cuts</option>
+	    </select>
 
 		<br>
 		<footer>
