--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<!-- <link rel="stylesheet" type="text/css" href="mpg.css" /> -->
 		<script src="//d3js.org/d3.v4.min.js"></script>
 		<script src="code/lib/d3.tip.v0.6.3.js"></script>
-		<!-- <script src="code/Histogram.js" charset="utf-8"></script> -->
+		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 		<script src="code/Histogram.js" charset="utf-8"></script>
 	</head>
 
