--- a/index.html
+++ b/index.html
@@ -10,14 +10,26 @@
 	</head>
 
 	<body>
-		<select id="d3-dropdown">
-		  <option value="first">First</option>
-		  <option value="second">Second</option>
-		  <option value="third">Third</option>
-		  <option value="forth">Forth</option>
+		<select id="description" onchange="disp_text()">
+		  <option value="1">Mean-Median</option>
+		  <option value="2">Efficiency Gap</option>
+		  <option value="3">>Number of Seats won by Democratic</option>
+		  <option value="4">Number of Cuts</option>
+		  <option value="5">Number of Splits</option>
 		</select>
 
-		<p id="selected-dropdown"></p>
+		<script text = "text/javascript">
+	    	function disp_text() {
+			    if (document.getElementById("leave").value == "1"){
+			        document.getElementById("message").innerHTML = "The mean-median difference is simply calculated by subtracting the average vote share of either party across all districts from the median vote share of the same party across all districts. A negative mean-median difference indicates that the examined party has an advantage; a positive difference indicates that the examined party is disadvantaged";
+			    }     
+			    else{
+			        document.getElementById("message").innerHTML = "Others";
+			    }        
+			}
+	    </script>
+
+	    <div id="message"></div>
 
 		<script type="text/javascript">
 			var dataLoaded = function(error, csvdata, csvdata2) {
