--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 		<script type="text/javascript">
 			var dataLoaded = function(error, csvdata, csvdata2) {
 				hist(csvdata, csvdata2, "nb_cuts", "#nb_ct", "Number of Cuts");
+				hist(csvdata, csvdata2, "egs", "#egs", "Efficiency Gap");
+				
 			};
 
 			var startHere = function(){
