--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			startHere();
 		</script>
 		
-		<!-- <div id="nb_ct" class="graph"></div> -->
+		<div id="nb_ct" class="graph"></div>
 		<!-- <div id="egs" class="graph"></div> -->
 
 	    <select id="picDD" onchange="changeHist()">
@@ -65,10 +65,11 @@
 	        <option value="2">Number of Seats won by Democratic</option>
 	        <option value="3">Number of Cuts</option>
 	    </select>
+	    
 	    <script type="text/javascript">
 	    	function changeHist() {
 	    		if (document.getElementById("picDD")=="1"){
-	    			hist(csvdata,csvdata2,"nb_cuts", "#body", "Number of Cuts")
+	    			hist(csvdata,csvdata2,"nb_cuts", "#nb_ct", "Number of Cuts")
 	    		}
 		    	else if (document.getElementById("picDD")=="2"){
 		    		hist(csvdata,csvdata2,"egs", "#body", "Number of Cuts")
