--- a/index.html
+++ b/index.html
@@ -52,17 +52,32 @@
             </div>
             <div class = "explain">
 
-                <p> <b>Gerrymandering</b> is a practice intended to establish a political advantage for a particular party of group by manipulating district boundaries. 
-
-                Historically, different measurements of gerrymandering have been presented to courts to support rationales to claim illegal gerrymandering. There is not yet a universally agreed-upon metric for evaluating splitting of municipal units with districting plans. Commonly used metrics usually focus on either geographical compactness (number of cuts and splits) or i (efficiency gap, mean-median, number of seats won by a certain Party).  
-
-                However, there is intricate interplay between the legal constraints and the measurements of interes, and among the measurements themselves. Researchers have struggled to understand the trade-offs between these intertwined metrics. 
-
-                We partner with researchers from the Metric Geometry and Gerrymandering Group (MGGG) at MIT CSAIL to design an interactive data visualization system to:
-                Unveil some hidden interactions between these metrics
-                Demystify some common false beliefs
-                Propose a novel way of looking at gerrymandering for policy makers and the general public
+                <p> 
+                    <b>Gerrymandering</b> is a practice intended to establish a political advantage for a particular party of group by manipulating district boundaries.
                 </p>
+                <br>
+                <p>
+                    Historically, different metrics of gerrymandering have been presented to courts to support rationales to claim illegal gerrymandering. There is not yet a universally agreed-upon metric for evaluating splitting of municipal units with districting plans. Commonly used metrics usually focus on either <i> geographical compactness </i> (number of cuts and splits) or <i> partisan symmetry and vote efficiency </i> (efficiency gap, mean-median, number of seats won by a certain Party).
+                </p>
+                <br>
+                <p>
+                    However, there is intricate interplay between the legal constraints and the measurements of interes, and among the measurements themselves. Researchers have struggled to understand the trade-offs between these intertwined metrics.
+                </p>
+                <br>
+                <p>
+                    We partner with researchers from the Metric Geometry and Gerrymandering Group (MGGG) at MIT CSAIL to design an interactive data visualization system to:
+                </p>
+                <ol>
+                    <li>
+                        Unveil some hidden interactions between these metrics;
+                    </li>
+                    <li>
+                        Demystify some common false beliefs;
+                    </li>
+                    <li>
+                        Propose a novel way of looking at gerrymandering for policy makers and the general public.
+                    </li>
+                </ol>
             </div>
 
             <figure><img src="images/Simulated_plan.png" class="sk" alt="Sketch_sim"/><figcaption>Simulated Plan for 11 Districts in Virginia</figcaption></figure>
