--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
             <div class = "sub-title">
                 <p>
                     Team Members: Chuyan Millie Huang, Wenwei Vicky Liu, Kim-Anh Nhi
-                </p>
-                <br>
-                <p>
                     In Collaboration with the Metric Geometry and Gerrymandering Group (MGGG) @ MIT CSAIL
                 </p>
             </div>
@@ -54,9 +51,7 @@
 
                 <p> 
                     <b>Gerrymandering</b> is a practice intended to establish a political advantage for a particular party of group by manipulating district boundaries.
-                </p>
-                <br>
-                <p>
+
                     Historically, different metrics of gerrymandering have been presented to courts to support rationales to claim illegal gerrymandering. There is not yet a universally agreed-upon metric for evaluating splitting of municipal units with districting plans. Commonly used metrics usually focus on either <i> geographical compactness </i> (number of cuts and splits) or <i> partisan symmetry and vote efficiency </i> (efficiency gap, mean-median, number of seats won by a certain Party).
                 </p>
                 <br>
@@ -80,7 +75,7 @@
                 </ol>
             </div>
 
-            <figure><img src="images/Simulated_plan.png" class="sk" alt="Sketch_sim"/><figcaption>Simulated Plan for 11 Districts in Virginia</figcaption></figure>
+            <figure><img src="images/Background1.jpg" class="sk" alt="Sketch_sim"/><figcaption>Simulated Plan for 11 Districts in Virginia</figcaption></figure>
 
             <p>Please, see our write-up <a href="http://github.mit.edu/pages/6894-sp19/Visualizing_Gerrymandering/writeup.html">here</a>.</p>
         </div>
