--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class = "sub-title">
                 <p>
                     Team Members: Chuyan Millie Huang, Wenwei Vicky Liu, Kim-Anh Nhi
+
                     In Collaboration with the Metric Geometry and Gerrymandering Group (MGGG) @ MIT CSAIL
                 </p>
             </div>
@@ -54,7 +55,6 @@
 
                     Historically, different metrics of gerrymandering have been presented to courts to support rationales to claim illegal gerrymandering. There is not yet a universally agreed-upon metric for evaluating splitting of municipal units with districting plans. Commonly used metrics usually focus on either <i> geographical compactness </i> (number of cuts and splits) or <i> partisan symmetry and vote efficiency </i> (efficiency gap, mean-median, number of seats won by a certain Party).
                 </p>
-                <br>
                 <p>
                     However, there is intricate interplay between the legal constraints and the measurements of interes, and among the measurements themselves. Researchers have struggled to understand the trade-offs between these intertwined metrics.
                 </p>
@@ -75,7 +75,7 @@
                 </ol>
             </div>
 
-            <figure><img src="images/Background1.jpg" class="sk" alt="Sketch_sim"/><figcaption>Simulated Plan for 11 Districts in Virginia</figcaption></figure>
+            <figure><img src="images/Background1.png" class="sk" alt="Sketch_sim"/></figure>
 
             <p>Please, see our write-up <a href="http://github.mit.edu/pages/6894-sp19/Visualizing_Gerrymandering/writeup.html">here</a>.</p>
         </div>
