--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
 
             <div id = "left2">
 
-                <p> Here are the definitions for you to choose from </p>
+                <p> Here are some of the common metrics used to measure gerrymandering. Click on any metric to see their definition and common interpretation.
+                </p>
 
                 <select id="description" onchange="disp_text()">
-                    <option value="0">Choose one definition: </option>
+                    <option value="0">Metrics definition: </option>
+                    <option value="1">Number of Cuts</option>
                     <option value="3">Number of Seats won by Democratic</option>
-                    <option value="1">Mean-Median</option>
+                    
                     <option value="2">Efficiency Gap</option>
                     <option value="4">Number of Cuts</option>
                 </select>
