--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 
     <body>
         <div id = "frame1">
-            <header>6.894 Interactive Data Visualization Final Project</header>
+            <header class = "title">6.894 Interactive Data Visualization Final Project</header>
             <div class = "sub-title">
                 <p>
                     Team Members: Chuyan Millie Huang, Wenwei Vicky Liu, Kim-Anh Nhi
-
+                </p>
+                <p>
                     In Collaboration with the Metric Geometry and Gerrymandering Group (MGGG) @ MIT CSAIL
                 </p>
             </div>
             <div class = "explain">
-
                 <p> 
                     <b>Gerrymandering</b> is a practice intended to establish a political advantage for a particular party of group by manipulating district boundaries.
 
@@ -58,7 +58,6 @@
                 <p>
                     However, there is intricate interplay between the legal constraints and the measurements of interes, and among the measurements themselves. Researchers have struggled to understand the trade-offs between these intertwined metrics.
                 </p>
-                <br>
                 <p>
                     We partner with researchers from the Metric Geometry and Gerrymandering Group (MGGG) at MIT CSAIL to design an interactive data visualization system to:
                 </p>
@@ -75,7 +74,7 @@
                 </ol>
             </div>
 
-            <figure><img src="images/Background1.png" class="sk" alt="Sketch_sim"/></figure>
+            <figure><img src="images/Background1.png" class="bgrd" alt="Sketch_sim"/></figure>
 
             <p>Please, see our write-up <a href="http://github.mit.edu/pages/6894-sp19/Visualizing_Gerrymandering/writeup.html">here</a>.</p>
         </div>
