--- a/index.html
+++ b/index.html
@@ -100,6 +100,26 @@
                 </select>
                 <div id="message"></div>
                 <br>
+                <p>
+                    Now, choose a particular metric you are interested in and choose what you consider as a reasonable range of values using the sliding bar filtering function. Observe what this does to the distributions of other metrics!
+                </p>
+                <p>
+                    Now, using the same tool above, let’s take a look at some common beliefs:
+                </p>
+                 <ol>
+                    <li>
+                        Gerrymandering should be flagged if Efficiency Gap is at 8 percent or more.
+                        <li>
+                            Observe the Efficiency Gap distribution, across 100,000 plans, how much of the time does it fall within +/- 8%?
+                        </li>
+                    </li>
+                    <li>
+                        Demystify some common false beliefs;
+                    </li>
+                    <li>
+                        Propose a novel way of looking at gerrymandering for policy makers and the general public.
+                    </li>
+                </ol>
             </div>
 
         
@@ -114,8 +134,7 @@
 
 
                 <div class="side-filter">
-                    <p>Now, choose a particular metric you are interested in and choose what you consider as a reasonable range of values using the sliding bar filtering function. Observe what this does to the distributions of other metrics!
-                    </p>
+                   
                     <br>
                     <div class="control">
                         <label class="radioMetric">
