--- a/index.html
+++ b/index.html
@@ -109,17 +109,32 @@
                  <ol>
                     <li>
                         Gerrymandering should be flagged if Efficiency Gap is at 8 percent or more.
-                        <li>
-                            Observe the Efficiency Gap distribution, across 100,000 plans, how much of the time does it fall within +/- 8%?
-                        </li>
+                        <ul>
+                            <li>
+                                Observe the Efficiency Gap distribution, across 100,000 plans, how much of the time does it fall within +/- 8%?
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        Demystify some common false beliefs;
+                        Higher number of cuts indicates gerrymandering.
+                        <ul>
+                            <li>
+                                Filter for the Efficiency Gap to be within the +- 8% range, how does this affect the distribution of number of cuts?
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        Propose a novel way of looking at gerrymandering for policy makers and the general public.
+                        Lower number of cuts would lead to “better” Efficiency Gap.
+                        <ul>
+                            <li>
+                                Is this actually true?
+                            </li>
+                        </ul>
                     </li>
                 </ol>
+                <p>
+                    After you have spent some time playing around with the tool on the right, check the section below.
+                </p>
             </div>
 
         
@@ -206,7 +221,20 @@
 
 
         <div id = "frame3">
-            <p>Have you seen? PUT THE ANSWERS FROM THE HISTOGRAM EXPLORATION</p>
+            <p>
+                <b>Did you see? Using Virginia as an example:</b>
+            </p>
+            <ol>
+                <li>
+                    More than half of the possible values for Efficiency Gap fall out of the +/- 8% range! 
+                </li>
+                <li>
+                    Surprise! Filter on Efficiency Gap to be within +/- 8% uniformly changes the distribution of number of cuts (not in one direction!)
+                </li>
+                <li>
+                    Lower number of cuts doesn’t not necessarily put Efficiency Gap into the +/- 8% range! 
+                </li>
+            </ol>
         </div>
 
         <!-- Part 2: Given 3 plan maps and let user click one to show plan's 6 metrics on corresponding global distribution -->
