--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 In Collaboration with the Metric Geometry and Gerrymandering Group (MGGG) @ MIT CSAIL
             </p>
         </div>
-        <div id = "frame1">
+        <div class = "frame1">
             <div class = "explain">
                 <p> 
                     <b>Gerrymandering</b> is a practice intended to establish a political advantage for a particular party of group by manipulating district boundaries.
@@ -74,7 +74,7 @@
                 </ol>
             </div>
 
-            <figure><img src="images/Background1.png" class="bgrd" alt="Sketch_sim"/></figure>
+            <figure><img src="images/Background1.png" id="bgrd" alt="Sketch_sim"/></figure>
 
             <p>Please, see our write-up <a href="http://github.mit.edu/pages/6894-sp19/Visualizing_Gerrymandering/writeup.html">here</a>.</p>
         </div>
